gitops/core/lychee/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lychee
  labels:
    app.kubernetes.io/name: lychee
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: lychee
  template:
    metadata:
      labels:
        app.kubernetes.io/name: lychee
    spec:
      containers:
        - name: lychee
          image: lycheeorg/lychee:v5.3.1
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: lychee-photos
              mountPath: /uploads
            - name: lychee-config
              mountPath: /conf
            - name: lychee-sym
              mountPath: /sym
      securityContext:
        fsGroup: 1000
      volumes:
        - name: lychee-photos
          persistentVolumeClaim:
            claimName: lychee-photos
        - name: lychee-config
          persistentVolumeClaim:
            claimName: lychee-config
        - name: lychee-sym
          persistentVolumeClaim:
            claimName: lychee-sym
